--- a/index.html
+++ b/index.html
@@ -43,20 +43,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function calculatePayment() {
-            const loanAmount = parseFloat(document.getElementById('loanAmount').value);
-            const interestRate = parseFloat(document.getElementById('interestRate').value) / 100 / 12;
-            const loanTerm = parseFloat(document.getElementById('loanTerm').value);
-
-            const monthlyPayment = (loanAmount * interestRate * Math.pow(1 + interestRate, loanTerm)) / (Math.pow(1 + interestRate, loanTerm) - 1);
-            const totalPayment = monthlyPayment * loanTerm;
-            const totalInterest = totalPayment - loanAmount;
-
-            document.getElementById('monthlyPayment').textContent = 'Rs.' + monthlyPayment.toFixed(2);
-            document.getElementById('totalPayment').textContent = 'Rs.' + totalPayment.toFixed(2);
-            document.getElementById('totalInterest').textContent = 'Rs.' + totalInterest.toFixed(2);
-        }
+    <script src="script.js">
+       
     </script>
 </body>
 </html>
